# dummy-me

./: .gitignore  .travis.yml  LICENSE  README.md  db.json  dummy-me.cabal  package.yaml
app/: Main.hs
src/Web/: DummyMe.hs
src/Web/DummyMe/: Config.hs  DB.hs  Handler.hs  Response.hs
test/Web/DummyMe/: DBSpec.hs
